--- a/app/lib/kaitennx.css
+++ b/app/lib/kaitennx.css
@@ -1,8 +1,12 @@
-.kaitennx-container {
-	min-height:100px;
+.knx-container {
+	min-height: 100px;
+	overflow-x: auto;
+	overflow-y: hidden;
+	white-space: nowrap;
+	padding-bottom: 2px;
 }
 
-.kaitennx-container .frame {
+.knx-container .frame {
 	border-style: solid;
 	border-width: 1px;
 	display: inline-block;
@@ -10,10 +14,10 @@
 	height: 100%;
 }
 
-.kaitennx-container .frame .title {
+.knx-container .frame .title {
 	background-color:#0066FF;
 }
 
-.kaitennx-container .frame .close {
+.knx-container .frame .close {
 
 }
